--- a/index.html
+++ b/index.html
@@ -10,9 +10,27 @@
     </head>
     <body>
         <div class="grid-container">
-            <div class="grid-item"></div>
-            <div class="grid-item"></div>
-            <div class="grid-item"></div>
+
+            <div class="grid-item coming-soon">
+                <div class="coming-soon-child">
+                    <p class="coming-soon-child-para">Coming Soon!</p>
+                </div>
+            </div>
+
+            <div class="grid-item mixd">
+                <div class="mixd-child">
+                    <p class="salon-name">Mixd<span>.</span>&nbsp;<span class="salon">SALON</span>
+                    <p class="slogan">This is where the slogan will go</p>
+                </div>  
+            </div>
+
+            <div class="grid-item buttons">
+                <div class="button-div">
+                    <button class="btn btn-1">Schedule an appointment</button><br>
+                    <button class="btn btn-2">1234 Street Name, Philadelphia</button>
+                </div>
+            </div>
+
         </div>
     </body>
 </html>
