--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=Tangerine:700" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
         <title>Document</title>
     </head>
     <body>
         <div class="grid-container">
-
+            
             <div class="grid-item coming-soon">
                 <div class="coming-soon-child">
-                    <p class="coming-soon-child-para">Coming Soon!</p>
+                    <p class="coming-soon-child-para">Coming soon!</p>
                 </div>
             </div>
 
@@ -26,8 +28,8 @@
 
             <div class="grid-item buttons">
                 <div class="button-div">
-                    <button class="btn btn-1">Schedule an appointment</button><br>
-                    <button class="btn btn-2">1234 Street Name, Philadelphia</button>
+                    <button class="btn btn-1" target="_blank" alt="Schedule appointment">Schedule an appointment</button><br>
+                    <button class="btn btn-2" target="_blank" alt="Salon location Google Maps">1234 Street Name, Philadelphia</button>
                 </div>
             </div>
 
