--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
             <div class="grid-item buttons">
                 <div class="button-div">
-                    <button class="btn btn-1" target="_blank" alt="Schedule appointment">Schedule an appointment</button><br>
-                    <button class="btn btn-2" target="_blank" alt="Salon location Google Maps">1234 Street Name, Philadelphia</button>
+                    <!-- <button class="btn btn-1" target="_blank" alt="Schedule appointment">Schedule an appointment</button><br> -->
+                    <button class="btn btn-2"> <a href="https://www.google.com/maps/place/Philadelphia,+PA/@40.0026767,-75.2581173,11z/data=!3m1!4b1!4m5!3m4!1s0x89c6b7d8d4b54beb:0x89f514d88c3e58c1!8m2!3d39.9525839!4d-75.1652215?hl=en" target="_blank" alt="Salon location Google Maps">1234 Street Name, Philadelphia</a></button>
                 </div>
             </div>
 
