updating media queries

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="queries.css">
         <link href="https://fonts.googleapis.com/css?family=Tangerine:700" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
         <title>Document</title>
@@ -19,8 +20,8 @@
                 </div>
             </div>
 
-            <div class="grid-item mixd">
-                <div class="mixd-child">
+            <div class="grid-item mixd-logo">
+                <div class="mixd-logo-child">
                     <img src="images/mixd.png" alt="Mixd salon logo">
                     <p class="slogan">This is where the slogan will go</p>
                 </div> 
