--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
             <div class="grid-item mixd-logo">
                 <div class="mixd-logo-child">
-                    <img src="images/mixd.png" alt="Mixd salon logo">
-                    <p class="slogan">This is where the slogan will go</p>
+                    <img src="images/mixd.png" alt="Mixd salon logo" class="logo">
+                    <p class="slogan">Elevating the salon experience by surpassing expectations.</p>
                 </div> 
             </div>
 
