--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="grid-item mixd-logo">
                 <div class="mixd-logo-child">
                     <img src="images/mixd.png" alt="Mixd salon logo" class="logo">
-                    <p class="slogan">Elevating the salon experience by surpassing expectations.</p>
+                    <p class="slogan">&#8220;Elevating the salon experience by surpassing expectations.&#8221;</p>
                 </div> 
             </div>
 
