added address for button

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
             <div class="grid-item mixd-logo">
                 <div class="mixd-logo-child">
                     <img src="images/mixd.png" alt="Mixd salon logo" class="logo">
-                    <p class="slogan">&#8220;Elevating the salon experience by surpassing expectations.&#8221;</p>
+                    <p class="slogan">&#8220;Elevating the salon experience by surpassing expectations&#8221;</p>
                 </div> 
             </div>
 
             <div class="grid-item buttons">
                 <div class="button-div">
                     <a class="btn-1" target="_blank" alt="Schedule appointment">Schedule an appointment</a>
-                    <a class="btn-2" href="https://www.google.com/maps/place/Philadelphia,+PA/@40.0026767,-75.2581173,11z/data=!3m1!4b1!4m5!3m4!1s0x89c6b7d8d4b54beb:0x89f514d88c3e58c1!8m2!3d39.9525839!4d-75.1652215?hl=en" target="_blank" alt="Salon location Google Maps">1234 Street Name, Philadelphia</a>
+                    <a class="btn-2" href="https://www.google.com/maps/place/6445+Rising+Sun+Ave,+Philadelphia,+PA+19111/@40.0507417,-75.0962678,17z/data=!3m1!4b1!4m5!3m4!1s0x89c6b6c29df3d4e5:0xb6dd7f21950e0ea8!8m2!3d40.0507376!4d-75.0940791?hl=en" target="_blank" alt="Salon location Google Maps">6445 Rising Sun Ave Philadelphia, PA</a>
                 </div>
             </div>
 
