--- a/index.html
+++ b/index.html
@@ -16,14 +16,12 @@
             
             <div class="grid-item coming-soon">
                 <div class="coming-soon-child">
-                    <p class="coming-soon-child-para">Coming soon!</p>
                 </div>
             </div>
 
             <div class="grid-item mixd-logo">
                 <div class="mixd-logo-child">
-                    <img src="images/mixd.png" alt="Mixd salon logo" class="logo">
-                    <p class="slogan">&#8220;Elevating the salon experience by surpassing expectations&#8221;</p>
+                    <img src="images/mixd2.png" alt="Mixd salon logo" class="logo">
                 </div> 
             </div>
 
