commented out button and placed period on address

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
             <div class="grid-item buttons">
                 <div class="button-div">
-                    <a class="btn-1" href="
-                    https://online-booking.salonbiz.com/olb/!page.widget_start?wbid=c2785t201904241622pDs89T644ASdP878zv47m&theme=2820&p_large=y" target="_blank" alt="Schedule appointment">Schedule an appointment</a>
-                    <a class="btn-2" href="https://www.google.com/maps/place/6445+Rising+Sun+Ave,+Philadelphia,+PA+19111/@40.0507417,-75.0962678,17z/data=!3m1!4b1!4m5!3m4!1s0x89c6b6c29df3d4e5:0xb6dd7f21950e0ea8!8m2!3d40.0507376!4d-75.0940791?hl=en" target="_blank" alt="Salon location Google Maps">6445 Rising Sun Ave Philadelphia, PA</a>
+                   <!--  <a class="btn-1" href="
+                       https://online-booking.salonbiz.com/olb/!page.widget_start?wbid=c2785t201904241622pDs89T644ASdP878zv47m&theme=2820&p_large=y" target="_blank" alt="Schedule appointment">Schedule an appointment</a>-->
+                    <a class="btn-2" href="https://www.google.com/maps/place/6445+Rising+Sun+Ave,+Philadelphia,+PA+19111/@40.0507417,-75.0962678,17z/data=!3m1!4b1!4m5!3m4!1s0x89c6b6c29df3d4e5:0xb6dd7f21950e0ea8!8m2!3d40.0507376!4d-75.0940791?hl=en" target="_blank" alt="Salon location Google Maps">6445 Rising Sun Ave. Philadelphia, PA</a>
                 </div>
             </div>
 
